reran the whole thing and also autosaved

--- a/assignment_2/assignment.ipynb
+++ b/assignment_2/assignment.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "### Ian Chow\n",
     "\n",
-    "### CTA200"
+    "### CTA200\n",
+    "\n",
+    "### Assignment 2"
    ]
   },
   {
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We try computing $x_0$ with setting $x_0 = -1, 0.1, 1$ and $5$:"
+    "We try computing $x_0$ with setting $x_0 = -1, 0.01, 1$ and $5$:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,9 +146,9 @@
       "Found root in 15 iterations\n",
       "1.4655712348572754\n",
       "\n",
-      "x_0 = 0.1:\n",
-      "Found root in 11 iterations\n",
-      "1.4655713154475905\n",
+      "x_0 = 0.01:\n",
+      "Found root in 19 iterations\n",
+      "1.4655714721100956\n",
       "\n",
       "x_0 = 1:\n",
       "Found root in 5 iterations\n",
@@ -159,7 +161,7 @@
     }
    ],
    "source": [
-    "x0s = [-1, 0.1, 1, 5]  # values of x_0 that we want to test:\n",
+    "x0s = [-1, 0.01, 1, 5]  # values of x_0 that we want to test:\n",
     "\n",
     "# try the newton raphson iteration function using different values of x0:\n",
     "for x0 in x0s:\n",
@@ -171,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be seen, Newton-Raphson iteration converges to the single root $x \\sim 1.4656$ for different values of $x_0$. For values far away from the root, it may not converge within the default maxmimum number of iterations since it might be too far away from the root to reach within a certain number of steps. Moreover, for values of $x_0$ close to $0$ it may also not converge within the maximum number of iterations. Since $f'(0) = 0$, the dividing by `df` step is very sensitive to small changes for $x_0$ close to $0$."
+    "As can be seen, Newton-Raphson iteration converges to the single root $x \\sim 1.4656$ for different values of $x_0$. For values far away from the root, it may not converge within the default maxmimum number of iterations since it might be too far away from the root to reach within a certain number of steps. Moreover, for values of $x_0$ very close to $0$ it may also not converge within the maximum number of iterations. Since $f'(0) = 0$, the dividing by `df` step is very sensitive to small changes for $x_0$ close to $0$. This can be seen in our testing, as the $x_0 = 0.01$ takes more iterations than the other three tested."
    ]
   },
   {
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,9 +198,9 @@
       "Found root in 16 iterations\n",
       "1.465571231876768\n",
       "\n",
-      "x_0 = 0.1:\n",
-      "Found root in 12 iterations\n",
-      "1.4655712318767748\n",
+      "x_0 = 0.01:\n",
+      "Found root in 20 iterations\n",
+      "1.465571231876824\n",
       "\n",
       "x_0 = 1:\n",
       "Found root in 6 iterations\n",
@@ -225,13 +227,6 @@
    "source": [
     "The function still works as expected, but it now takes more iterations to converge (since $\\epsilon$ is smaller). For all four values of $x_0$, the function took $1$ more iteration to converge to the smaller tolerance $\\epsilon = 10^{-8}$ compared to $\\epsilon = 10^{-6}$."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
