finished the docs for all 3 functions of assignment 2

--- a/assignment_2/assignment.ipynb
+++ b/assignment_2/assignment.ipynb
@@ -46,13 +46,40 @@
    "source": [
     "def f(x):\n",
     "    \"\"\"\n",
-    "    finish docs\n",
+    "    f(x)\n",
+    "    \n",
+    "    Function f, defined by: \n",
+    "    f(x) = x^3 - x^2 - 1\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x: float or array of floats\n",
+    "    Input x of the function f(x) = x^3 - x^2 - 1\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    fx: float or array of floats\n",
+    "    Output of the function f(x) = x^3 - x^2 - 1\n",
     "    \"\"\"\n",
     "    return x ** 3 - x ** 2 - 1\n",
     "\n",
     "def df(x):\n",
     "    \"\"\"\n",
-    "    finish docs\n",
+    "    df(x)\n",
+    "    \n",
+    "    Function df, defined by:\n",
+    "    df(x) = 3x^2 - 2x\n",
+    "    This is the derivative of f(x) above with respect to x\n",
+    "    \n",
+    "    Parameters\n",
+    "    ---------\n",
+    "    x: float or array of floats\n",
+    "    Input x of the function df(x) = 3x^2 - 2x\n",
+    "    \n",
+    "    Returns\n",
+    "    ---------\n",
+    "    dfx: float or array of floats\n",
+    "    Output of the function df(x) = 3x^2 - 2x\n",
     "    \"\"\"\n",
     "    return 3 * x ** 2 - 2 * x"
    ]
@@ -94,7 +121,43 @@
    "source": [
     "def newton(f, df, x0, epsilon=1e-6, max_iter=30):\n",
     "    \"\"\"\n",
-    "    finish docs\n",
+    "    newton(f, df, x0, epsilon=1e-6, max_iter-30)\n",
+    "    \n",
+    "    Newton-Raphson iteration to find the root of a function f(x)\n",
+    "    using the function's derivative df(x) and an initial guess x = x0.\n",
+    "    Implemented using the expression x_{n + 1} = x_n - f(x_n)/f'(x_n).\n",
+    "    If a root is found within an error tolerance epsilon and a maximum number of iterations max_iter,\n",
+    "    the root is returned and the number of iterations taken is printed. Otherwise the message\n",
+    "    \"Iteration failed\" is printed and None is returned\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    f: function \n",
+    "    Function f(x) to find the root of\n",
+    "    \n",
+    "    df: function\n",
+    "    Function df(x), the derivative of f with respect to x\n",
+    "    \n",
+    "    x0: float\n",
+    "    Starting guess x = x0 to initialize the iterative root-finding algorithm\n",
+    "    \n",
+    "    epsilon: float, default\n",
+    "    Error tolerance of algorithm solution (maximum amount by which the computed root x can differ from 0). \n",
+    "    Set to 1e-6 by default.\n",
+    "    \n",
+    "    max_iter: int, default\n",
+    "    Maximum number of Newton-Raphson iterations. If a root is not found within the maximum number of iterations,\n",
+    "    the function fails. Set to 30 by default. \n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    x: float\n",
+    "    Root of the function f (within an error tolerance epsilon so that |f(x)| < epsilon)) if a root is found within\n",
+    "    the error tolerance and the maximum number of iterations\n",
+    "    None: None\n",
+    "    Returned if the algorithms fails (i.e. a root is not found within the error tolerance epsilon even after the maximum\n",
+    "    number of algorithm iterations has been reached)\n",
+    "    \n",
     "    \"\"\"\n",
     "    xn = x0  # initialize x_n as x_0, the starting guess for Newton-Raphson iteration\n",
     "    # perform up to a maximum of max_iter iterations\n",
